tests/errors/tc_stmt_if_cond.lx
@module "main"

pub const main -> fn () int {
    if (42) {
        return 0;
    }
    return 0;
}
